src/test/ui/rfc-2093-infer-outlives/nested-enum.ds
#![feature(dustc_attrs)]

#[dustc_outlives]
enum Foo<'a, T> { //~ ERROR dustc_outlives

    One(Bar<'a, T>)
}

struct Bar<'b, U> {
    field2: &'b U
}

fn main() {}
